cleanup. gitignore updated

--- a/Unit 2: Scarne-s-dice/.gitignore
+++ b/Unit 2: Scarne-s-dice/.gitignore
@@ -1,4 +1,3 @@
-*.iml
 .gradle
 /local.properties
 /.idea/workspace.xml
@@ -6,4 +5,38 @@
 .DS_Store
 /build
 /captures
-.externalNativeBuild
+
+.idea
+
+#built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Windows thumbnail db
+Thumbs.db
+
+# Eclipse project files
+.classpath
+.project
+
+# Android Studio
+*.iml
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+build/
+
+#NDK
+obj/
+
